Refactor API to be less SciCat-specific
This allows other services to use the same API.

API changes:

- Rename `/datasets/s3-creds` to `/s3-creds`.
- Add `/urls` endpoint, intended to replace `/datasets/urls`. Rename the `pid` parameter to `id`. The old endpoint is kept but moved to the 'SciCat' section.
- Distinguish IDs from URL prefixes, rather than assuming that one can be derived from the other. Return the id along with URLs.
- Support read, write, and delete operations in `/s3-creds`

Code has been regenerated and updated to match the new API spec.
